Fix spacing in right sidebar and satellite modal dialogs

--- a/input.css
+++ b/input.css
@@ -240,7 +240,7 @@
 
     .right_sidebar_base_class {
         @apply
-            flex flex-col justify-start
+            flex flex-col justify-start gap-2
             w-60 2xl:w-80 h-full overflow-y-auto
             px-3 py-2
             max-2xl:bg-base-300 max-2xl:absolute max-2xl:z-1 max-2xl:top-0 max-2xl:right-0;
